test/files/neg/permanent-blindness.check
permanent-blindness.scala:10: warning: imported `Bippy' is permanently hidden by definition of class Bippy in package bar
  import foo.{ Bippy, Bop, Dingus }
               ^
permanent-blindness.scala:10: warning: imported `Bop' is permanently hidden by definition of object Bop in package bar
  import foo.{ Bippy, Bop, Dingus }
                      ^
permanent-blindness.scala:10: warning: imported `Dingus' is permanently hidden by definition of object Dingus in package bar
  import foo.{ Bippy, Bop, Dingus }
                           ^
error: No warnings can be incurred under -Xfatal-warnings.
three warnings found
one error found
